- Fixed bug #47054 (BC break in static functions called as dynamic)